<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arimagerecognizer.HomeActivity">

    <!-- Page Title -->
    <TextView
        android:id="@+id/textViewPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAR"
        android:layout_width="0dp"
        android:layout_height="100dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

<!--        CAMERA-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewARCamera"
                android:layout_width="128dp"
                android:layout_height="74dp"
                android:src="@mipmap/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/graphic_for_ar_camera" />

            <TextView
                android:id="@+id/textViewARCameraTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/open_ar_camera"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewARCamera"
                app:layout_constraintTop_toTopOf="@+id/imageViewARCamera"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/textViewARCameraDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/learn_interactively_with_augmented_reality"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/textViewARCameraTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewARCameraTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

<!--    STUDY-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardStudy"
        android:layout_width="0dp"
        android:layout_height="100dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewStudy"
                android:layout_width="138dp"
                android:layout_height="87dp"
                android:src="@drawable/vecteezy_studying_and_learning_online_concept_1270244"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/study_graphic" />

            <TextView
                android:id="@+id/textViewStudyTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/study"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewStudy"
                app:layout_constraintTop_toTopOf="@+id/imageViewStudy" />

            <TextView
                android:id="@+id/textViewStudyDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_learning_new_vocabulary"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/textViewStudyTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewStudyTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

<!--    TEST-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardTest"
        android:layout_width="0dp"
        android:layout_height="100dp"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageViewTest"
                android:layout_width="138dp"
                android:layout_height="69dp"
                android:src="@drawable/quiz"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/test_graphic" />

            <TextView
                android:id="@+id/textViewTestTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewTest"
                app:layout_constraintTop_toTopOf="@+id/imageViewTest"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/textViewTestDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/test_your_knowledge"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/textViewTestTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTestTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageViewHelp"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/view_help_icon" />

    <ImageView
        android:id="@+id/imageViewSettings"
        android:layout_width="57dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="300dp"
        android:src="@drawable/baseline_person_24"
        tools:layout_editor_absoluteX="326dp"
        tools:layout_editor_absoluteY="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/settings_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>