<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.arimagerecognizer.UserProfileActivity">

    <!-- Profile Title -->
    <TextView
        android:id="@+id/textViewProfileTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username TextView -->
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAlignment="center"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <!-- change password Title -->
    <TextView
        android:id="@+id/textChangePasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"

        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Change Password Button -->
    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:backgroundTint="@color/lightpink"
    android:layout_marginTop="35dp"
    app:layout_constraintTop_toBottomOf="@+id/textChangePasswordText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


    <!-- Logout Button -->
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/lightpink"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>